# EnergyConsumption

./: CMakeLists.txt  EnergyConsumption.cpp  EnergyConsumption.h  energy_data (2).csv  energy_data.csv  forecast.cpp  forecast.hpp
.github/workflows/: c-cpp.yml
